新增用户权限系统，分离“服务器配置”中的“用户管理”和“缓存管理”；整理后端各种 Manager 的混乱代码逻辑
